# drjutils

./: .gitignore  LICENSE.md  README.md  drjutils.code-workspace  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
config/: __init__.py  api_keys.py  api_keys.yaml  config.py
docs/: README.md  TASKS.md
docs/common/: README.md
docs/config/: README.md  api_keys.md
docs/images/: README.md
docs/log/: README.md
docs/notes/: README.md
docs/notes/general/: 2025-05-01.md  2025-06-18.md  2025-06-23.md  2025-06-24.md  2025-06-30.md
examples/: api_keys_example.py  schema_enhanced_example.py
src/drjutils/: __init__.py
src/drjutils/automation/openai_codex/: setup.sh
src/drjutils/common/: __init__.py  d_paths.py  intervals.py  numbers.py  paths.py  times.py
src/drjutils/common/types/: __init__.py  sentinel.py  type_checks.py  type_debugging.py  type_utils.py  unset.py
src/drjutils/common/types/bools/: __init__.py  boolean_alias.py  enabled_disabled.py  on_off.py  true_false.py  yes_no.py
src/drjutils/common/types/collections/: __init__.py  collection_assertions.py  collection_utils.py
src/drjutils/common/types/enums/: __init__.py  enum_map.py  enum_regex.py  enum_utils.py  mapped_enum.py
src/drjutils/common/types/strings/: __init__.py  d_intervals.py  d_ints.py  d_signs.py  d_times.py  d_words.py
src/drjutils/config/: __init__.py  api_keys.py  api_keys.yaml
src/drjutils/config/schemas/: __init__.py  api_keys.schema.yaml
src/drjutils/configurator/: __init__.py  generators.py  loader.py  schema.py  schema_parser.py  utils.py
src/drjutils/logger/: __init__.py  logger.py
tests/drjutils/common/: test_intervals.py  test_numbers.py
tests/drjutils/common/test_types/: test_enum_regex.py  test_mapped_enum.py  test_type_debugging.py
tests/drjutils/config/: test_schema.py  test_schema_parser.py
