[project]
    name            = "DRJ-Utils"
    version         = "0.1.0"
    description     = "Common utilities shared across my projects"
    authors         = [{ name = "Daniel Jackson", email = "643707+danielrjackson@users.noreply.github.com" }]
    requires-python = "~=3.13"  # Newest version of python
    readme          = { file = "README.md", content-type = "text/markdown" }
    license         = { file = "LICENSE.md" }
    dependencies    = [
        "intvalpy>=1.6.5,<2",   # Integer arithmetic in Python
        "keyring>=25.6.0,<26",  # Access API Keys from system credential manager
        "mcp[cli]>=1.6.0,<2",   # Model Context Protocol CLI interface
#        "numpy>=2.2.5,<3",      # Numerical Computing
        "pyyaml>=6.0.2,<7",     # Read YAML files
]

[build-system]
    requires        = ["hatchling"]
    build-backend   = "hatchling.build"

[dependency-groups]
    dev = [
        "coverage>=7.7.1,<8",       # Test coverage report
        "hypothesis>=6.130.4,<7",   # Fuzzy testing
        "pytest>=7.4.4,<8",         # Python testing library
    ]

[tool.pytest.ini_options]
    pythonpath = ["src"]

[tool.uv]
    package = false
